# libmox

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Doxyfile.in  Makefile.am  README  bootstrap  configure.ac  libmox.info.in  libmox.spec.in  mox.info.in  mox.spec.in  moxlib.info.in  moxlib.spec.in
debian/: changelog  control  copyright  rules  watch
m4/: NOTES
src/: Makefile.am  atom.h  colorlib.c  colorlib.h  database.c  database.h  getword.c  libatom.c  libatom.dox  lqsort.c  lqsort.h  mgp.c  mgp.h  mgp_build.c  mgp_clipper.c  mgp_debug.c  mgp_psdriver.c  mgp_util.c  mgpdefs.h  o_util.c  pdb.h  pdblib.c  pdblib.h  pdbutil.c  subst.sed  transform.h  util.c  util.h  veclib.c  veclib.h
test/: Makefile.am  chaincat.c  mgptst.c  tst_color.c  tst_db.c
